--- a/SciFiConsoleWpf/MainWindow.xaml
+++ b/SciFiConsoleWpf/MainWindow.xaml
@@ -8,7 +8,8 @@
         xmlns:vlc="clr-namespace:LibVLCSharp.WPF;assembly=LibVLCSharp.WPF"
         mc:Ignorable="d"
         Closing="Window_Closing"
-        Title="SCIFICONSOLE" Height="800" Width="1600" WindowState="Maximized" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Background="#050A12">
+        Title="SCIFICONSOLE" Height="800" Width="1600" WindowState="Maximized" WindowStyle="SingleBorderWindow"
+        ResizeMode="CanResize" Background="#050A12">
     <Window.Resources>
         <!-- 색상 팔레트 -->
         <SolidColorBrush x:Key="BgMain" Color="#050A12" />
